--- a/syp.biz.Core/syp.biz.Core.csproj
+++ b/syp.biz.Core/syp.biz.Core.csproj
@@ -6,22 +6,27 @@
     <Authors>Doron Guttman</Authors>
     <Company>syp.biz</Company>
     <Product>Core</Product>
-    <Copyright>syp.biz</Copyright>
+    <Copyright>Copyright 2017 syp.biz</Copyright>
     <PackageProjectUrl>https://github.com/sypbiz/core</PackageProjectUrl>
     <RepositoryUrl>https://github.com/sypbiz/core</RepositoryUrl>
     <NeutralLanguage>en</NeutralLanguage>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseUrl>https://github.com/sypbiz/core/blob/master/LICENSE</PackageLicenseUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DebugType>embedded</DebugType>
     <DebugSymbols>true</DebugSymbols>
     <DocumentationFile>bin\Release\netstandard2.0\syp.biz.Core.xml</DocumentationFile>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugType>embedded</DebugType>
     <DebugSymbols>true</DebugSymbols>
     <DocumentationFile>bin\Debug\netstandard2.0\syp.biz.Core.xml</DocumentationFile>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
