+ xml comments * renamed some items for consistency * refactored some code for minimalism * changed logic of AreEqual in DelegateEqualityComparer + IO.GetFilesRecursive

--- a/syp.biz.Core/syp.biz.Core.csproj
+++ b/syp.biz.Core/syp.biz.Core.csproj
@@ -20,6 +20,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DocumentationFile>bin\Release\netstandard2.0\syp.biz.Core.xml</DocumentationFile>
     <LangVersion>latest</LangVersion>
+    <WarningsAsErrors>NU1605;CS1591</WarningsAsErrors>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
